force-app/main/default/objects/Time_Sheet_Correction__c/Time_Sheet_Correction__c.object-meta.xml
<CustomObject>
    <label>Time Sheet Correction</label>
    <nameField>
        <displayFormat>TSC-{0000}</displayFormat>
        <label>Time Sheet Correction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Sheet Corrections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>