force-app/main/default/objects/Time_Sheet_Correction__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendance</label>
    <referenceTo>Attendance__c</referenceTo>
    <relationshipLabel>Time Sheet Corrections</relationshipLabel>
    <relationshipName>Time_Sheet_Corrections</relationshipName>
    <type>Lookup</type>
</CustomField>