force-app/main/default/objects/Time_Sheet_Correction__c/fields/Deviation_in_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Deviation_in_Work_Hours__c</fullName>
    <formula>Work_Duration__c -   Hours_in_Workday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deviation in Work Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>