force-app/main/default/objects/Time_Sheet_Correction__c/fields/Did_not_work__c.field-meta.xml
<CustomField>
    <fullName>Did_not_work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did not work</label>
    <type>Checkbox</type>
</CustomField>