force-app/main/default/objects/Time_Sheet_Correction__c/fields/Employee_SFID__c.field-meta.xml
<CustomField>
    <fullName>Employee_SFID__c</fullName>
    <formula>Time_Sheet__r.Employee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee SFID</label>
    <type>Text</type>
</CustomField>