force-app/main/default/objects/Time_Sheet_Correction__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_HH_mm</valueSetName>
    </valueSet>
</CustomField>