force-app/main/default/objects/Time_Sheet_Correction__c/fields/Hours_in_Workday__c.field-meta.xml
<CustomField>
    <fullName>Hours_in_Workday__c</fullName>
    <label>Hours in Workday</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>