force-app/main/default/objects/Time_Sheet_Correction__c/fields/Process_Instance_ID__c.field-meta.xml
<CustomField>
    <fullName>Process_Instance_ID__c</fullName>
    <label>Process Instance ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>