force-app/main/default/objects/Time_Sheet_Correction__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_HH_mm</valueSetName>
    </valueSet>
</CustomField>