force-app/main/default/objects/Time_Sheet_Correction__c/fields/Time_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Time_Sheet__c</fullName>
    <label>Time Sheet</label>
    <referenceTo>Time_Sheet__c</referenceTo>
    <relationshipLabel>Time Sheet Corrections</relationshipLabel>
    <relationshipName>Time_Sheet_Corrections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>