force-app/main/default/objects/Time_Sheet_Correction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unspecified</fullName>
                <default>true</default>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>Arrived Late</fullName>
            </value>
            <value>
                <fullName>Left Early</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>