force-app/main/default/objects/Time_Sheet_Correction__c/fields/Work_Duration__c.field-meta.xml
<CustomField>
    <fullName>Work_Duration__c</fullName>
    <formula>(HOUR(Work_End__c) - HOUR(Work_Start__c)) + 
(MINUTE(Work_End__c) - MINUTE(Work_Start__c)) / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>