force-app/main/default/objects/Time_Sheet_Correction__c/fields/Work_Hour_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Work_Hour_Comparison__c</fullName>
    <formula>IF(
    Deviation_in_Work_Hours__c &lt; 0,
    &quot;Less&quot;,
    IF(
        Deviation_in_Work_Hours__c = 0,
        &quot;Same&quot;,
        &quot;More&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates whether the employee worked fewer, the same or more hours than usual, based on the value in &quot;Difference in Normal Work Time&quot;</inlineHelpText>
    <label>Work Hour Comparison</label>
    <type>Text</type>
</CustomField>