force-app/main/default/objects/Time_Sheet_Correction__c/fields/Work_Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours_Per_Day__c</fullName>
    <formula>Time_Sheet__r.Default_Hours_in_Workday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Hours Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>