force-app/main/default/objects/Time_Sheet_Correction__c/fields/Work_Start__c.field-meta.xml
<CustomField>
    <fullName>Work_Start__c</fullName>
    <label>Work Start</label>
    <type>Time</type>
</CustomField>