force-app/main/default/objects/Time_Sheet_Correction__c/validationRules/End_must_be_after_start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_must_be_after_start</fullName>
    <active>true</active>
    <description>Triggers if the end time is not set to be after the start time</description>
    <errorConditionFormula>Work_End__c &lt;= Work_Start__c</errorConditionFormula>
    <errorMessage>Work End must be set to be after Work Start</errorMessage>
</ValidationRule>